client-gen/tests/snapshots/generator__multiple_services.snap
---
source: client-gen/tests/generator.rs
expression: "gen(idl, \"Multiple\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
use core::marker::PhantomData;
#[allow(unused_imports)]
use sails_rtl::collections::BTreeMap;
#[allow(unused_imports)]
use sails_rtl::{
    calls::{Activation, Call, Query, Remoting, RemotingAction},
    prelude::*,
    String,
};
#[derive(Clone)]
pub struct Multiple<R, A>
where
    R: Remoting<A>,
    A: Default,
{
    remoting: R,
    _phantom: PhantomData<A>,
}
impl<A: Default, R: Remoting<A>> Multiple<R, A> {
    pub fn new(remoting: R) -> Self {
        Self {
            remoting,
            _phantom: PhantomData,
        }
    }
}
impl<R, A> traits::Multiple<A> for Multiple<R, A>
where
    R: Remoting<A> + Clone,
    A: Default,
{
    fn do_this(&mut self, p1: u32, p2: MyParam) -> impl Call<A, u16> {
        RemotingAction::new(
            self.remoting.clone(),
            &[24, 68, 111, 84, 104, 105, 115],
            (p1, p2),
        )
    }
    fn do_that(&mut self, p1: (u8, u32)) -> impl Call<A, u8> {
        RemotingAction::new(self.remoting.clone(), &[24, 68, 111, 84, 104, 97, 116], p1)
    }
}
pub mod multiple {
    use super::*;
    pub mod io {
        use super::*;
        #[derive(Debug, Default, Clone, Copy)]
        pub struct DoThis(());
        impl DoThis {
            #[allow(dead_code)]
            pub fn encode_call(p1: u32, p2: super::MyParam) -> Vec<u8> {
                let args = (p1, p2);
                let mut result = Vec::with_capacity(7 + args.encoded_size());
                result.extend_from_slice(&[]);
                result.extend_from_slice(&[24, 68, 111, 84, 104, 105, 115]);
                args.encode_to(&mut result);
                result
            }
            #[allow(dead_code)]
            pub fn decode_reply(mut reply: &[u8]) -> Result<u16, sails_rtl::errors::Error> {
                if !reply.starts_with(&[24, 68, 111, 84, 104, 105, 115]) {
                    return Err(sails_rtl::errors::Error::Rtl(
                        sails_rtl::errors::RtlError::ReplyPrefixMismatches,
                    ));
                }
                reply = &reply[7..];
                let result = Decode::decode(&mut reply).map_err(sails_rtl::errors::Error::Codec)?;
                Ok(result)
            }
        }
        #[derive(Debug, Default, Clone, Copy)]
        pub struct DoThat(());
        impl DoThat {
            #[allow(dead_code)]
            pub fn encode_call(p1: (u8, u32)) -> Vec<u8> {
                let args = p1;
                let mut result = Vec::with_capacity(7 + args.encoded_size());
                result.extend_from_slice(&[]);
                result.extend_from_slice(&[24, 68, 111, 84, 104, 97, 116]);
                args.encode_to(&mut result);
                result
            }
            #[allow(dead_code)]
            pub fn decode_reply(mut reply: &[u8]) -> Result<u8, sails_rtl::errors::Error> {
                if !reply.starts_with(&[24, 68, 111, 84, 104, 97, 116]) {
                    return Err(sails_rtl::errors::Error::Rtl(
                        sails_rtl::errors::RtlError::ReplyPrefixMismatches,
                    ));
                }
                reply = &reply[7..];
                let result = Decode::decode(&mut reply).map_err(sails_rtl::errors::Error::Codec)?;
                Ok(result)
            }
        }
    }
}
#[derive(Clone)]
pub struct Named<R, A>
where
    R: Remoting<A>,
    A: Default,
{
    remoting: R,
    _phantom: PhantomData<A>,
}
impl<A: Default, R: Remoting<A>> Named<R, A> {
    pub fn new(remoting: R) -> Self {
        Self {
            remoting,
            _phantom: PhantomData,
        }
    }
}
impl<R, A> traits::Named<A> for Named<R, A>
where
    R: Remoting<A> + Clone,
    A: Default,
{
    fn that(&self, p1: u32) -> impl Query<A, String> {
        RemotingAction::new(
            self.remoting.clone(),
            &[20, 78, 97, 109, 101, 100, 16, 84, 104, 97, 116],
            p1,
        )
    }
}
pub mod named {
    use super::*;
    pub mod io {
        use super::*;
        #[derive(Debug, Default, Clone, Copy)]
        pub struct That(());
        impl That {
            #[allow(dead_code)]
            pub fn encode_call(p1: u32) -> Vec<u8> {
                let args = p1;
                let mut result = Vec::with_capacity(11 + args.encoded_size());
                result.extend_from_slice(&[20, 78, 97, 109, 101, 100]);
                result.extend_from_slice(&[16, 84, 104, 97, 116]);
                args.encode_to(&mut result);
                result
            }
            #[allow(dead_code)]
            pub fn decode_reply(mut reply: &[u8]) -> Result<String, sails_rtl::errors::Error> {
                if !reply.starts_with(&[20, 78, 97, 109, 101, 100]) {
                    return Err(sails_rtl::errors::Error::Rtl(
                        sails_rtl::errors::RtlError::ReplyPrefixMismatches,
                    ));
                }
                reply = &reply[6..];
                if !reply.starts_with(&[16, 84, 104, 97, 116]) {
                    return Err(sails_rtl::errors::Error::Rtl(
                        sails_rtl::errors::RtlError::ReplyPrefixMismatches,
                    ));
                }
                reply = &reply[5..];
                let result = Decode::decode(&mut reply).map_err(sails_rtl::errors::Error::Codec)?;
                Ok(result)
            }
        }
    }
}
pub mod traits {
    use super::*;
    pub trait Multiple<A> {
        #[allow(clippy::type_complexity)]
        fn do_this(&mut self, p1: u32, p2: MyParam) -> impl Call<A, u16>;
        #[allow(clippy::type_complexity)]
        fn do_that(&mut self, p1: (u8, u32)) -> impl Call<A, u8>;
    }
    pub trait Named<A> {
        #[allow(clippy::type_complexity)]
        fn that(&self, p1: u32) -> impl Query<A, String>;
    }
}
